--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,11 +1,16 @@
-<!DOCTYPE html>
-<html>
-<head>
-	<title>Welcome to the hell</title>
-</head>
-<body>
-	<h1>
-		<%= xxx %>		
-	</h1>
-</body>
-</html>
+
+<%- contentFor('body') %>
+<h1>
+	<%= xxx %>		
+</h1>
+
+
+<%- contentFor('foo') %>
+
+<h1>
+	haha FOO
+</h1>
+
+<h2>
+	Day la the H2
+</h2>
